--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://digides.netlify.com/"
+baseURL = "https://digitaldesa.netlify.com/"
 languageCode = "en-us"
 title = "Digital Desa | Upana Studio"
 theme = "digides"
